--- a/deploy/volumes/logstash/10-mp-logs.conf
+++ b/deploy/volumes/logstash/10-mp-logs.conf
@@ -24,6 +24,6 @@ output {
     ssl_certificate_verification => false
     # Data streams only support create action
 #     action => "create"
-    index => "logs-marketplace-%{+YYYYMMdd}"
+    index => "logs-mss-%{+YYYYMMdd}"
   }
 }
