--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,9 @@ okhttpVersion=4.9.3
 logbackVersion=1.4.7
 loggingVersion=3.0.5
 
-
 ktorVersion=2.2.4
 
 kotlinLoggingJvmVersion=3.0.5
+
+serializationVersion=1.4.1
+openapiVersion=6.3.0
