--- a/gradle.properties
+++ b/gradle.properties
@@ -18,16 +18,21 @@ okhttpVersion=4.9.3
 # logging
 logbackVersion=1.4.7
 loggingVersion=3.0.5
+#kermitLoggerVersion=1.2.2
+logbackEncoderVersion=7.4
+logbackKafkaVersion=0.2.0-RC2
+janinoVersion=3.1.10
 
+pluginShadow=7.1.2
 ktorVersion=2.2.4
+swaggerUiVersion=4.13.2
 
 kotlinLoggingJvmVersion=3.0.5
 
-serializationVersion=1.4.1
+serializationVersion=1.5.1
 openapiVersion=6.3.0
-
 datetimeVersion=0.4.0
+atomicfuVersion=0.20.2
 
 #kafka
-atomicfuVersion=0.20.2
 kafkaVersion=3.4.0
