repo logic: init

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,38 +1,45 @@
+# settings
 kotlin.code.style=official
 kotlin.native.cacheKind=none
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 
+# kotlin / ktor
 kotlinVersion=1.8.22
-
 coroutinesVersion=1.7.1
+ktorVersion=2.3.4
 
+# docker
 bmuschkoVersion=8.1.0
 
+# test
 kotestVersion=5.5.5
 jUnitJupiterVersion=5.9.2
 testcontainersVersion=1.17.6
 
+# serialization
 jacksonVersion=2.14.1
-okhttpVersion=4.9.3
+serializationVersion=1.5.1
 
 # logging
 logbackVersion=1.4.7
 loggingVersion=3.0.5
-#kermitLoggerVersion=1.2.2
 logbackEncoderVersion=7.4
 logbackKafkaVersion=0.2.0-RC2
 janinoVersion=3.1.10
-
-pluginShadow=7.1.2
-ktorVersion=2.3.4
-swaggerUiVersion=4.13.2
-
 kotlinLoggingJvmVersion=3.0.5
+pluginShadow=7.1.2
 
-serializationVersion=1.5.1
+# swagger / openapi
+swaggerUiVersion=4.13.2
 openapiVersion=6.3.0
+
+# date
 datetimeVersion=0.4.0
+
+# kafka
+kafkaVersion=3.4.0
 atomicfuVersion=0.20.2
 
-#kafka
-kafkaVersion=3.4.0
+# repo
+cache4kVersion=0.11.0
+kmpUUIDVersion=0.7.0
