--- a/gradle.properties
+++ b/gradle.properties
@@ -43,3 +43,6 @@ atomicfuVersion=0.20.2
 # repo
 cache4kVersion=0.11.0
 kmpUUIDVersion=0.7.0
+# PSQL
+postgresDriverVersion=42.6.0
+exposedVersion=0.41.1
