repo: added arcade db

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ bmuschkoVersion=8.1.0
 # test
 kotestVersion=5.5.5
 jUnitJupiterVersion=5.9.2
-testcontainersVersion=1.17.6
+testContainersVersion=1.17.6
 
 # serialization
 jacksonVersion=2.14.1
@@ -46,3 +46,6 @@ kmpUUIDVersion=0.7.0
 # PSQL
 postgresDriverVersion=42.6.0
 exposedVersion=0.41.1
+# Gremlin
+tinkerpopVersion=3.6.3
+arcadeDbVersion=23.4.1
