--- a/app-ktor/src/commonMain/resources/application.yml
+++ b/app-ktor/src/commonMain/resources/application.yml
@@ -1,35 +1,32 @@
-#  application.yaml работает в jvm и native, но не работает в режиме сервлета с Tomcat
+#  application.yml работает в jvm и native, но не работает в режиме сервлета с Tomcat
 # в этом случае необходимо сформировать application.conf
 
 ktor:
-  application:
-    modules:
-      - ru.mss.app.ktor.ApplicationJvmKt.moduleJvm
+  development: true
   deployment:
     port: 8080
-  urls:
-    - "http://127.0.0.1:8080/"
-    - "http://0.0.0.0:8080/"
-    - "http://192.168.0.182:8080/"
   watch:
     - classes
     - resources
+  application:
+    modules:
+      - "ru.mss.app.ktor.ApplicationKt.module"
+#  logger: "kmp"
+#  urls:
+#    - "http://127.0.0.1:8080/v1"
+#    - "http://0.0.0.0:8080/v1"
+#    - "http://192.168.0.182:8080/v1"
 musicsearchservice:
   repository:
     test: "$DB_TYPE_TEST:inmemory"
-    prod: "$DB_TYPE_PROD:inmemory"
+    prod: "$DB_TYPE_PROD:postgres"
     # prod: psql
     psql:
       password: musicsearchservice-pass
       schema: musicsearchservice
-      url: jdbc:postgresql://localhost:5432/musicsearchservice
+      url: "jdbc:postgresql://localhost:5432/musicsearchservice"
       user: postgres
-#    jwt:
-#      secret: "secret"
-#      issuer: "OtusKotlin"
-#      audience: "topic-users"
-#      realm: "mss-topics"
-#      clientId: "otus-musicsearchservice"
+
 jwt:
   issuer: "http://localhost:8081/auth/realms/otus-musicsearchservice"
   audience: "topic-users"
