--- a/deploy/docker-compose-fbos.yml
+++ b/deploy/docker-compose-fbos.yml
@@ -25,6 +25,37 @@ services:
 #        # маршрутизации будет рассмотрена ниже
 #        tag: app.nginx
 
+  psql:
+    image: postgres
+    container_name: postgresql
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    expose:
+      - "5432"
+    environment:
+      POSTGRES_DB: musicsearchservice
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: musicsearchservice-pass
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  keycloak:
+    image: jboss/keycloak
+    ports:
+      - "8081:8080"
+      - "8082:9990"
+    volumes:
+      - ./keycloak:/tmp
+    environment:
+      KEYCLOAK_USER: otus
+      KEYCLOAK_PASSWORD: otus
+      KEYCLOAK_IMPORT: "/tmp/realm-export.json"
+
   zookeeper:
     image: confluentinc/cp-zookeeper:7.0.9
     container_name: zookeeper-okkafkaex
@@ -129,3 +160,4 @@ services:
 
 volumes:
   opensearch-data:
+  postgres_data:
