--- a/app-ktor/src/jvmTest/resources/application.yaml
+++ b/app-ktor/src/jvmTest/resources/application.yaml
@@ -1,4 +1,4 @@
-#  application.yml работает в jvm и native, но не работает в режиме сервлета с Tomcat
+#  application.yaml работает в jvm и native, но не работает в режиме сервлета с Tomcat
 # в этом случае необходимо сформировать application.conf
 
 ktor:
