--- a/deploy/docker-compose-fbos.yml
+++ b/deploy/docker-compose-fbos.yml
@@ -35,11 +35,11 @@ services:
     expose:
       - "5432"
     environment:
-      POSTGRES_DB: musicsearchservice
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: musicsearchservice-pass
+      POSTGRES_DB: "musicsearchservice"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "musicsearchservice-pass"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
+      test: [ "CMD-SHELL", "pg_isready -d musicsearchservice -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
