--- a/app-ktor/src/jvmMain/resources/application.yaml
+++ b/app-ktor/src/jvmMain/resources/application.yaml
@@ -20,7 +20,8 @@ musicsearchservice:
     prod: "$DB_TYPE_PROD:postgres"
     # prod: psql
     psql:
-      url: "jdbc:postgresql://localhost:5432/musicsearchservice"
+#      url: "jdbc:postgresql://localhost:5432/musicsearchservice"
+      url: "jdbc:postgresql://postgresql:5432/musicsearchservice"
       user: postgres
       password: musicsearchservice-pass
       schema: musicsearchservice
@@ -31,8 +32,10 @@ musicsearchservice:
 #      realm: "mss-topics"
 #      clientId: "otus-musicsearchservice"
 jwt:
-  issuer: "http://localhost:8081/auth/realms/otus-musicsearchservice"
+  #issuer: "http://localhost:8081/auth/realms/otus-musicsearchservice"
+  issuer: "http://keycloak:8080/auth/realms/otus-musicsearchservice"
   audience: "topic-users"
   realm: "otus-musicsearchservice"
   clientId: "otus-musicsearchservice"
-  certUrl: "http://localhost:8081/auth/realms/otus-musicsearchservice/protocol/openid-connect/certs"
+  #certUrl: "http://localhost:8081/auth/realms/otus-musicsearchservice/protocol/openid-connect/certs"
+  certUrl: "http://keycloak:8080/auth/realms/otus-musicsearchservice/protocol/openid-connect/certs"
