--- a/deploy/docker-compose-fbos.yml
+++ b/deploy/docker-compose-fbos.yml
@@ -5,25 +5,23 @@
 
 version: '3'
 services:
-#  app:
-#    image: nginx:latest
-#    ports:
-#      - "8080:80"
-#    depends_on:
-#      - fluent-bit
-#    volumes:
-#      - ./volumes/nginx/default.conf:/etc/nginx/conf.d/default.conf
-#      - ./volumes/nginx/nginx.conf:/etc/nginx/nginx.conf
-#    logging:
-#      # используемый драйвер логгирования
-#      driver: "fluentd"
-#      options:
-#        # куда посылать лог-сообщения, необходимо чтобы адрес
-#        # совпадал с настройками плагина forward
-#        fluentd-address: localhost:24224
-#        # теги используются для маршрутизации лог-сообщений, тема
-#        # маршрутизации будет рассмотрена ниже
-#        tag: app.nginx
+  app:
+    image: app-ktor:0.0.1
+    ports:
+      - "8080:8080"
+    depends_on:
+      - fluent-bit
+      - psql
+    logging:
+      # используемый драйвер логгирования
+      driver: "fluentd"
+      options:
+        # куда посылать лог-сообщения, необходимо чтобы адрес
+        # совпадал с настройками плагина forward
+        fluentd-address: 0.0.0.0:24224
+        # теги используются для маршрутизации лог-сообщений, тема
+        # маршрутизации будет рассмотрена ниже
+        tag: app.app-ktor
 
   psql:
     image: postgres
@@ -46,6 +44,7 @@ services:
 
   keycloak:
     image: jboss/keycloak
+    container_name: keycloak
     ports:
       - "8081:8080"
       - "8082:9990"
